# CPSC-597-Capstone-Project

./: .replit  pyproject.toml
application/: dbr.py  manage.py  server.py
application/buki_app/: __init__.py  config.py  old.py
application/buki_app/models/: chats.py  messages.py  users.py
application/buki_app/templates/: layout.html  profile.html  session.html  welcome.html
application/buki_app/templates/chats/: new.html  show.html
application/buki_app/utils/: util.py
application/buki_app/views/: chats.py  views.py
application/instance/: buki_app.db
application/scripts/: db.py
